[workspace]
members = [
    "lib/client",
    "programs/*",
]

[workspace.dependencies]
anchor-client = "0.29.0"
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
fixed = { git = "https://github.com/blockworks-foundation/fixed.git", branch = "v1.11.0-borsh0_10-mango" }
pyth-sdk-solana = "0.10.1"
solana-account-decoder = ">=1.14, <1.17"
solana-client = ">=1.14, <1.17"
solana-logger = ">=1.14, <1.17"
solana-program = ">=1.14, <1.17"
solana-program-test = ">=1.14, <1.17"
solana-rpc = ">=1.14, <1.17"
solana-sdk = ">=1.14, <1.17"
#spl-associated-token-account = "1.0.3"
spl-associated-token-account = { version = "2.2.0", features = ["no-entrypoint"] }

[profile.release]
codegen-units = 1
lto = "fat"
overflow-checks = true
[profile.release.build-override]
codegen-units = 1
incremental = false
opt-level = 3
